apps/support/tactical-rmm/base/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trmm-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "trmm-websockets"
spec:
  ingressClassName: nginx
  tls:
  - hosts: [api.support4u.se]
    secretName: support4u-tls
  rules:
  - host: api.support4u.se
    http:
      paths:
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: trmm-websockets
            port:
              number: 8383
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trmm-backend
            port:
              number: 8000
